# QuantCore

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json
dashboard/: dashboard.py  requirements.txt  subscriber.py
engine/: main.cpp
engine/analytics/: amihud.hpp  analytics.hpp  kalman.hpp  kyle.hpp  parkinson.hpp  predictive_pdf.hpp  vpin.hpp  welford.hpp
engine/orderbook/: orderbook.cpp  orderbook.hpp
engine/publisher/: publisher.cpp  publisher.hpp
engine/websocket/: wb.cpp  wb.hpp
